# Smart-Code-Review2

./: .gitignore  Dockerfile  README.md  app.py  codeverifier.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  timepenalty.py
server/: app.py
